# pascalvoc-to-labelstudio

./: .gitignore  README.md  convert.py  pyproject.toml  requirements-dev.txt  requirements.txt
demo/: demo.xml
util/: json_tool.py  object_tool.py
